--- a/sign-up.html
+++ b/sign-up.html
@@ -30,14 +30,14 @@
 
     // Firebase configuration (same as in login.html)
     const firebaseConfig = {
-      apiKey: "AIzaSyCm6lwEyebQLixzhetCb_CS77DU42y1bNc",
-      authDomain: "login-751a9.firebaseapp.com",
-      projectId: "login-751a9",
-      storageBucket: "login-751a9.firebasestorage.app",
-      messagingSenderId: "147563392596",
-      appId: "1:147563392596:web:042b136664dd39a11087c1",
-      measurementId: "G-CWB35NPTYC"
-    };
+  apiKey: "api-key",
+  authDomain: "login",
+  projectId: "login",
+  storageBucket: "login",
+  messagingSenderId: "value",
+  appId: "kqjef",
+  measurementId: "kqwugf"
+};
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
